--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "maatwebsite/excel": "^3.1",
-        "proengsoft/laravel-jsvalidation": "^4.7"
+        "proengsoft/laravel-jsvalidation": "^4.7",
+        "spatie/laravel-activitylog": "^3.17"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
