--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/ui": "^2.4",
         "maatwebsite/excel": "^3.1",
         "proengsoft/laravel-jsvalidation": "^4.7",
-        "spatie/laravel-activitylog": "^3.17"
+        "spatie/laravel-activitylog": "^3.17",
+        "spatie/laravel-permission": "^5.5"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
